Changelog for DaylonGraphicsLibrary UE plugin

Last updated: September 24, 2023

Enabled Unity build.

Moved LogDaylon decl/impl to DaylonLogging.h/.cpp.

Broke out various classes and function categories to their own .h/.cpp files.
DaylonUtils.h is retained as a "#include everything" convenience header.

Made FHighScoreTable a template class so capacity and maxnamelength
could be easily customized.

Added TFastMessageMediator template class that uses TArray instead 
of TMap to directly find the consumer array that associates with 
a particular message.

TMessageableValue requires a template argument for the 
mediator class.

Fixed compile-time bug in TMessageMediator::UnregisterConsumer.

Added SDaylonSprite::SetCurrentAge method to allow
changing where the animation starts or continues from.
Used e.g. by Defcon to keep human sprites from 
walking perfectly in sync with each other. If you 
spawn sprites at different times, this is less 
of an issue.

TMessageMediator groups message consumers by message ID, 
increasing message sending performance.

Added TMessageMediator and related helper types.

Changed Daylon::GetWidgetPosition to fix bug where 
it wasn't quite returning the widget's layout position.

Added Tint member to SDaylonSprite, lets sprites
be tinted by an FLinearColor.

Added FRange class to make min/max ranges easier to handle.

Added operator-- and operator++ overloads for TBindableValue.

Added bReversible property to FDaylonSpriteAtlas, to 
support texture animations that can be looped in a 
forward-then-backwards-then-forwards-etc. manner, 
simplifying texture creation and reducing texture size.
The scavenger atlas, e.g. is reversible.

Added IsStatic member to SDaylonSprite, to let calls 
to Update be ignored so that upstream code can still 
have Update being called but manage the current cel explicitly.

Added FlipHorizontal and FlipVertical members to SDaylonSprite, 
which swap the UV region of OnPaint's quad box accordingly.