@@ -41,6 +41,14 @@ const float MinAsteroidSplitAngle          =  5.0f;   // Children of rock death 
 const float MaxAsteroidSplitAngle          = 35.0f;   // Ditto, but this is the max angular deviation, in degrees.
 const float MinAsteroidSplitInertia        =  0.1f;   // Child rock could have as little as this much of parent's inertia.
 const float MaxAsteroidSplitInertia        =  3.0f;   // Ditto, max as much as this.
+
+// Asteroid masses and inertial impart are used to alter player ship inertia during non-fatal collisions.
+// Until we compute elastic collision (kinetic energy transfer) properly, it's best to leave AsteroidInertiaImpart at zero.
+// https://www.plasmaphysics.org.uk/programs/coll2d_cpp.htm
+const float BigAsteroidMass                =  1.0f;
+const float MediumAsteroidMass             =  0.5f;
+const float SmallAsteroidMass              =  0.3f;
+const float AsteroidInertiaImpart          =  0.0f;   // How much inertia to impart to shielded player ship when hit by asteroid.
 								           
 const int32 ValueBigAsteroid               =    20;
 const int32 ValueMediumAsteroid            =    50;
