@@ -1,6 +1,10 @@
 Changelog for DaylonGraphicsLibrary UE plugin
 
-Last updated: September 24, 2023
+Last updated: October 9, 2023
+
+Fixed bug where DoesLineSegmentIntersectCircle returned false incorrectly.
+This was e.g. causing the player ship in Stellar Mayhem to remain alive 
+or fail to explode asteroids even though it was inside them.
 
 Enabled Unity build.
 
